## Process this file with automake to produce Makefile.in

PACKAGE = @PACKAGE@
VERSION = @VERSION@
datadir = @datadir@


pkgdata_DATA = main.ui radicals.ui settings.ui dictionaryinstall.ui installprogress.ui kanjipad.ui

EXTRA_DIST =  main.ui radicals.ui settings.ui dictionaryinstall.ui installprogress.ui kanjipad.ui

