noinst_HEADERS = gwaei.h common.h kanjipad-callbacks.h kanjipad-candidatearea.h kanjipad-drawingarea.h kanjipad.h main-callbacks.h main.h main-tabs.h libunique.h printing.h radsearchtool-callbacks.h radsearchtool.h settings-callbacks.h settings-listeners.h dictionaryinstall.h installprogress.h dictionarymanager.h settings.h pluginmanager.h spellcheck.h output-callbacks.h kanjipad-callbacks.h  kanjipad-candidatearea.h	kanjipad-drawingarea.h	kanjipad.h
