noinst_HEADERS = application-callbacks.h application-private.h application.h dictinfolist-callbacks.h dictinfolist.h dictionaryinstallwindow-callbacks.h dictionaryinstallwindow-private.h dictionaryinstallwindow.h gettext.h gwaei.h installprogresswindow-callbacks.h installprogresswindow-private.h installprogresswindow.h kanjipad-candidatearea.h kanjipad-drawingarea.h kanjipadwindow-callbacks.h kanjipadwindow-private.h kanjipadwindow.h pluginmanager.h printing.h radicalswindow-callbacks.h radicalswindow-private.h radicalswindow.h search-data.h searchwindow-callbacks.h searchwindow-output.h searchwindow-private.h searchwindow.h settingswindow-callbacks.h settingswindow-private.h settingswindow.h spellcheck-callbacks.h spellcheck.h window-private.h window.h
