libraryincludedir = $(includedir)/libwaei
libraryinclude_HEADERS = definitions.h dictionary.h edictionary.h kanjidictionary.h exampledictionary.h unknowndictionary.h dictionary-installer.h dictionary-callbacks.h dictionarylist.h history.h io.h libwaei.h morphology.h preferences.h query.h range.h regex.h result.h search.h utilities.h word.h vocabulary.h

noinst_HEADERS = gettext.h dictionary-private.h dictionarylist-private.h history-private.h
